# simulation_model2gazebo

./: .gitignore  LICENSE  README.md
sim/: CMakeLists.txt  package.xml
sim/launch/: all_in.launch  all_in_car.launch
sim/scripts/: keyboard_control.py  ps_control.py
sim_vehicle/: CMakeLists.txt  README.md  package.xml
sim_vehicle/conf/: params_blank.yaml  params_car.yaml  params_drone.yaml
sim_vehicle/include/: drone_model.hh  gazebo_INS_devices.hh  model.hh  model2gazebo.hh  physics_model.hh
sim_vehicle/sensors/: camera.urdf.xacro  imu.urdf.xacro  sensors.urdf.xacro
sim_vehicle/src/: drone_model.cpp  gazebo_INS_devices.cpp  model2gazebo.cpp  physics_model.cpp
sim_vehicle/urdf/: physics.urdf.xacro  vehicle.urdf copy.xacro  vehicle.urdf.xacro  vehicle_car.urdf.xacro
sim_vehicle_plugins/: CMakeLists.txt  package.xml
sim_vehicle_plugins/include/: blank_model.hh  car_model.hh  drone_model.hh  inputs.hh  model2gazebo.hh
sim_vehicle_plugins/src/: blank_model.cpp  car_model.cpp  drone_model.cpp  model2gazebo.cpp  physics_model.cpp
sim_visualization/: CMakeLists.txt  package.xml
sim_visualization/include/: trace3D.h
sim_visualization/launch/: visualization.launch
sim_visualization/rqt/: imu.perspective
sim_visualization/rviz/: rviz_visualization.rviz
sim_visualization/src/: main.cpp  trace3D.cpp
sim_world/: CMakeLists.txt  package.xml
sim_world/launch/: template.launch  template_basic.launch
sim_world/models/ground_plane/: model.config  model.sdf
sim_world/worlds/: template.world
