<?xml version="1.0"?>
<package>
  <version>2.0.0</version>

  <name>sim_vehicle</name>
  <description>This project aims to create a template to simulate the phisics of a generic vehicle (drone, car, ...)</description>

  <maintainer email="martivalverde.98@gmail.com">Félix Martí Valverde</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>
