<?xml version="1.0"?>
<package format="2">
    <version>2.0.0</version>
    <name>sim_visualization</name>

    <description>This project aims to create a template to simulate the phisics of a generic vehicle (drone, car, ...)</description>
    <maintainer email="martivalverde@hotmail.com">Félix Martí Valverde</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    
</package>
